# atmarkit_rust_adv

./: .gitignore  README.md
1/http-server/: Cargo.toml  index.html
1/http-server/src/: main.rs  sub.rs
10/actix-posts/: Cargo.toml  data.json
10/actix-posts/src/: handler.rs
10/actix-posts/templates/: base.html  index.html
10/dioxus-posts/: Cargo.toml  index.html
10/dioxus-posts/src/: data.rs  main.rs
11/actix-posts/src/: main.rs
11/dioxus-posts/src/: data.rs  main.rs
12/todo-app/: Cargo.toml
12/todo-app/src/: lib.rs  store.rs  utils.rs
12/todo-app/templates/: item.html
13/todo-app/: Cargo.toml  LICENSE_MIT
13/todo-app/src/: lib.rs  store.rs
14/todo-app/src/: lib.rs  template.rs
14/todo-app/templates/: item.html
15/actix-posts/: .env  Cargo.toml  data.json  database.db  seed.csv
15/actix-posts/migrations/: 20241110044413_create_posts_table.up.sql
15/actix-posts/src/: handler.rs  main.rs
15/actix-posts/src/handler/: data.rs
15/actix-posts/templates/: show.html
2/actix-posts/: Cargo.toml
2/actix-posts/src/: handler.rs  main.rs
2/actix-posts/src/handler/: data.rs
2/actix-posts/static/: footer.html  header.html
2/actix-sample/: Cargo.toml
2/actix-sample/src/: main.rs
3/actix-posts/: Cargo.toml  data.json
3/actix-posts/src/: handler.rs  main.rs
3/actix-posts/src/handler/: data.rs
3/actix-posts/static/: form.html
4/actix-posts/: Cargo.toml  data.json
4/actix-posts/src/: handler.rs  main.rs
4/actix-posts/templates/: base.html  index.html  show.html
5/actix-posts/: Cargo.toml  data.json
5/actix-posts/src/: handler.rs  main.rs
5/actix-posts/templates/: form.html
6/actix-posts/: data.json  data_base.json
6/actix-posts/src/: handler.rs
6/actix-posts/src/handler/: data.rs
7/actix-posts/: Cargo.toml
7/actix-posts/src/: main.rs
7/actix-posts/templates/: item.html
7/dioxus-posts/: Cargo.toml
7/dioxus-posts/src/: main.rs
8/dioxus-posts/: Dioxus.toml
8/dioxus-posts/src/: main.rs
9/dioxus-posts/: Cargo.toml
9/dioxus-posts/src/: data.rs  main.rs
