[package]
name = "dioxus-posts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dioxus = { version = "0.5.1", features = ["web"] }
dioxus-logger = "0.5.0"
dioxus-web = "0.5.1"
im-rc = "15.1.0"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
