[package]
name = "todo-app"
version = "0.1.0"
authors = ["Yamauchi <yama@naosan.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
askama = "0.12.1"
# 以降#2で追加
chrono = "0.4.38"
js-sys = "0.3.70"

[dependencies.web-sys]
version = "0.3.70"
features = [
  'console',
  'Storage',
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  # 以降#2で追加
  'CssStyleDeclaration',
  'HtmlDivElement',
  'HtmlInputElement',
  'MouseEvent',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
