[package]
name = "actix-posts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
serde = {version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
