[package]
name = "actix-posts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-session = { version = "0.6.2", default-features = false, features = ["cookie-session"] }
actix-web = "4.4.0"
actix-web-flash-messages = { version = "0.4.2", features = ["sessions", "cookies"] }
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
serde = {version = "1.0.188", features = ["derive"]}
serde-xml-rs =  { git = "https://github.com/adrianbenavides/serde-xml-rs.git", rev = "fc2d35e5e2d08c4e8c8dee13449ff3ce98de46c1" }
serde_json = "1.0.107"
tera = {version = "1.19.1", default-features = false}
