[package]
name = "dioxus-posts"
version = "0.1.0"
authors = ["Yamauchi <yama@naosan.jp>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json"] }
im-rc = "15.1.0"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
